# QT_M36

./: CMakeLists.txt
include/: Printer.h
src/: Printer.cpp  main.cpp
